@@ -1,12 +1,12 @@
 /*******************************************************************************
  * Copyright 2014 See AUTHORS file.
- *
+ * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
+ * 
  *   http://www.apache.org/licenses/LICENSE-2.0
- *
+ * 
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,32 +14,23 @@
  * limitations under the License.
  ******************************************************************************/
 
-package com.badlogic.gdx.ai.tests.msg;
+package com.badlogic.gdx.ai.msg;
 
-import com.badlogic.gdx.Gdx;
-import com.badlogic.gdx.ai.msg.MessageManager;
-import com.badlogic.gdx.ai.msg.Telegram;
-import com.badlogic.gdx.ai.msg.Telegraph;
-import com.badlogic.gdx.ai.tests.TelegramProviderTest;
-import com.badlogic.gdx.utils.Array;
+/** The {@code MessageManager} is a singleton {@link MessageDispatcher} in charge of the creation, dispatch, and management of
+ * telegrams.
+ * 
+ * @author davebaol */
+public class MessageManager extends MessageDispatcher {
 
-/** @author avianey */
-public class City implements Telegraph {
+	private static final MessageManager instance = new MessageManager();
 
-	Array<House> houses;
-
-	public City () {
-		Gdx.app.log(City.class.getSimpleName(), "A new city is born...");
-		houses = new Array<House>();
-		MessageManager.getInstance().addListeners(this, TelegramProviderTest.MSG_TIME_TO_ACT);
+	/** Don't let anyone else instantiate this class */
+	private MessageManager () {
 	}
 
-	@Override
-	public boolean handleMessage (Telegram msg) {
-		// build a new house
-		if (houses.size <= 10) {
-			houses.add(new House());
-		}
-		return false;
+	/** Returns the singleton instance of the message dispatcher. */
+	public static MessageManager getInstance () {
+		return instance;
 	}
+
 }
